--- a/Exploratory Data Analysis/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis/Exploratory Data Analysis.ipynb
@@ -567,11 +567,7 @@
     "\n",
     "## 3. Descriptive statistics of data\n",
     "\n",
-    "### Data types\n",
-    "\n",
-    "It is useful to first understand the data that you're dealing with along with the data types of each column. The data types may dictate how you transform and engineer features.\n",
-    "\n",
-    "To get an overview of the data types within a data frame, use the `info()` method."
+    "### Data types"
    ]
   },
   {
@@ -663,7 +659,7 @@
    "source": [
     "### Statistics\n",
     "\n",
-    "Now let's look at some statistics about the datasets. We can do this by using the `describe()` method."
+    "Now let's look at some statistics about the datasets."
    ]
   },
   {
@@ -1695,7 +1691,7 @@
    "id": "cfedce33",
    "metadata": {},
    "source": [
-    "Similarly to the consumption plots, we can observe that a lot of the variables are highly positively skewed, creating a very long tail for the higher values. We will make some transformations during the next exercise to correct for this skewness."
+    "Similarly to the consumption plots, we can observe that a lot of the variables are highly positively skewed, creating a very long tail for the higher values. We can make some transformations during the next step to correct for this skewness."
    ]
   }
  ],
