--- a/Feature Engineering & Modelling/Feature Engineering & Modelling.ipynb
+++ b/Feature Engineering & Modelling/Feature Engineering & Modelling.ipynb
@@ -245,9 +245,7 @@
     "\n",
     "## 3. Feature engineering\n",
     "\n",
-    "### Difference between off-peak prices in December and preceding January\n",
-    "\n",
-    "Below is the code created by your colleague to calculate the feature described above. Use this code to re-create this feature and then think about ways to build on this feature to create features with a higher predictive power."
+    "### Difference between off-peak prices in December and preceding January\n"
    ]
   },
   {
@@ -547,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The correlation still very low."
+    "The correlation with churn is very low."
    ]
   },
   {
@@ -598,9 +596,9 @@
    "source": [
     "1. How long a customer has been active may reveal the loyalty to some extent, so more active months, higher retention probability. \n",
     "\n",
-    "2. Clients coming toward the end of contract probably look for better deals, while clinets just joined may have a period to leave if they're not satisfied and clients in the middle contract, they may be charged if they wanted to leave, deterring clients from churning mid-way through their agreement. So, I think months to end will be an interesting feature because it may reveal patterns and behaviours about timing of churn.\n",
+    "2. Clients coming toward the end of contract probably look for better deals, while clinets just joined may have a period to leave if they're not satisfied and for clients in the middle contract, they may be charged if they wanted to leave, deterring clients from churning mid-way through their agreement. So, I think months to end will be an interesting feature because it may reveal patterns and behaviours about timing of churn.\n",
     "\n",
-    "3. If a client has made recent updates to their contract, they are more likely to be satisfied or at least they have received a level of customer service to update or change their existing services. This may be a positive sign, they are an engaged customer, and so I believe months_modif_prod will be an interesting feature to include because it shows the degree of how 'engaged' a client is with PowerCo.\n",
+    "3. If a client has made recent updates to their contract, they are more likely to be satisfied or at least they have received a level of customer service to update or change their existing services. This may be a positive sign, they are an engaged customer, and so I believe months_modif_prod will be an interesting feature to include because it shows the degree of how 'engaged' a client is.\n",
     "\n",
     "4. Finally the number of months since a client last renewed a contract I believe will be an interesting feature because once again, it shows the degree to which that client is engaged. It also goes a step further than just engagement, it shows a level of commitment if a client renews their contract. For this reason, I believe months_renewal will be a good feature to include."
    ]
@@ -1448,9 +1446,8 @@
     "\n",
     "Within the test set about 10% of the rows are churners (churn = 1).\n",
     "\n",
-    "The accuracy score is high, but it does not tell us the whole story.\n",
-    "Looking at the precision score, this shows us a score of 0.885 which is not bad, but could be improved.\n",
-    "However, the recall shows us that the classifier has a very poor ability to identify positive samples.\n",
+    "The accuracy and precision score is high, but it does not tell us the whole story.\n",
+    "The recall shows us that the classifier has a very poor ability to identify positive samples.\n",
     "So overall, we are not able to predict cases where clients do churn correctly. We are identifying high percent of customers as not-churn but acutally they would. \n",
     "\n",
     "So the feature engineering part may need further dived deep, as well as the model fine-tuning to optimzie the recall score.\n"
@@ -1706,7 +1703,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1715,6 +1711,7 @@
     "* Consumption over 12 months and net margin is top drivers for churn in this model\n",
     "* Forecasted electricity consumption for next 12 months is also an influential driver\n",
     "* Price sensitivity features are scattered around but are not the main driver for a customer churning\n",
+    "\n",
     "Recall the original hypothesis:\n",
     "\n",
     "`Is churn driven by the customers' price sensitivity?`\n",
