--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -1512,7 +1512,9 @@
    "id": "9a745a02",
    "metadata": {},
    "source": [
-    "## f) Consumption Type"
+    "## f) Consumption Type\n",
+    "\n",
+    "*** Below is from the BCG solution on forage (https://www.theforage.com/virtual-internships/prototype/Tcz8gTtprzAS4xSoK/GAMMA-Virtual-Experience-Program?ref=NorEhdj87k7nLnwK2)"
    ]
   },
   {
