--- a/Feature Engineering & Modelling.ipynb
+++ b/Feature Engineering & Modelling.ipynb
@@ -556,7 +556,9 @@
     "* months_activ = Number of months active until reference date (Jan 2016)\n",
     "* months_to_end = Number of months of the contract left until reference date (Jan 2016)\n",
     "* months_modif_prod = Number of months since last modification until reference date (Jan 2016)\n",
-    "*months_renewal = Number of months since last renewal until reference date (Jan 2016)"
+    "*months_renewal = Number of months since last renewal until reference date (Jan 2016)\n",
+    "\n",
+    "*** This part(transforming dates into months) is from the BCG solution from forage (https://www.theforage.com/virtual-internships/prototype/Tcz8gTtprzAS4xSoK/GAMMA-Virtual-Experience-Program?ref=NorEhdj87k7nLnwK2)"
    ]
   },
   {
